	  missing.
	* The Evolution integration plugin must now be explicitly enabled.  Use
	  the --enable-gevolution argument to configure to enable it.
	* The Contact Availability Prediction plugin must now be explicitly
	  enabled.  Use the --enable-cap argument to configure to enable it.

	Finch:
	* New default binding ctrl+x to open context menus.

version 2.4.1 (03/31/2008):
	http://developer.pidgin.im/query?status=closed&milestone=2.4.1

	libpurple:
	* Treat AIM Unicode messages as UTF-16 rather than UCS-2; this
	  should have no functional effect, other than continued support
	  on systems which have dropped UCS-2 conversions.
	* Add support for setting buddy icons on Gadu-Gadu (Tomasz Salacinski)
	* Fix a crash when clearing the buddy icon for an account on XMPP
	* Fix a crash during login for some ICQ accounts
	* Prefer more available resources on XMPP when priorities are equal
	* Fix incorrectly marking some Yahoo! contacts as blocked
	* Improved handling of UTF-8 group names on ICQ (beret)
	* Fix a crash when starting if you have a Zephyr account
	* Increase XMPP ping timeout to 120 seconds, to prevent poor network
	  connections from timing out unnecessarily.
	* Don't crash on XMPP forms with empty default values.
	* Fix issues with CHAP authentication for SOCKS5 proxies.

	Pidgin:
	* Remove a workaround for older versions gstreamer that was causing
	  crashes on some non-Linux systems such as HPUX
	* Fix some cases of the conversation input entry area being 1 pixel high
	* Fix for displaying channel & buddy names in conversation window when
	  they have '&' in them
	* Some memory leak fixes, especially in the Text Replacement plugin
	* Rectangular but non-square buddy icons have rounded corners in the buddy
	  list

	Finch:
	* Fix compiling with Glib older than 2.6
	* Ensure existing conversations selected from the 'Send IM' dialog are
	  given focus
	* Move the tooltip on the left of the buddylist if there's not enough room
	  on the right to show it.
